# GLSandbox

./: CMakeLists.txt  LICENSE.md  README.md
Assets/Graphs/: deferred_pass_combine.graph  deferred_pass_lighting.graph  deferred_pass_model.graph  deferred_pass_skybox.graph  deferred_sub_graph.graph  deferred_teapot.graph  lit_teapot.graph  node_playground.graph  profile.graph  simple_teapot.graph
Assets/Meshes/: Teapot.msh  quad.msh
Assets/Shaders/: blinn-phong-textured.frag  blinn-phong.frag  deferred_model.vert  simple-model.frag  simple-quad.frag  texture-quad.vert
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/imgui/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_truetype.h
lib/imgui/imgui-node-editor/: imgui_node_editor.cpp
lib/imnodes/: CMakeLists.txt
lib/nativefiledialog/: CMakeLists.txt
lib/stb/: CMakeLists.txt
src/: Window.cpp  Window.h  main.cpp
src/GLSandbox/: Assets.h  BasicNodes.cpp  BasicNodes.h  ExecutableNodes.cpp  ExecutableNodes.h  FixedNodes.cpp  FixedNodes.h  GLSandboxRenderer.cpp  GLSandboxRenderer.h  MathNodes.h  MeshNode.cpp  MeshNode.h  NodeClassifications.h  PipelineGraph.cpp  PipelineGraph.h  PortPinImpl.cpp  RenderPassNode.h  ShaderNode.cpp  ShaderNode.h
src/GLSandbox/Nodes/: BasicNodes.cpp  BasicNodes.h  ExecutionNodes.cpp  ExecutionNodes.h  ExtendedNodes.cpp  ExtendedNodes.h  FixedNodes.cpp  FixedNodes.h  FlowControlNodes.cpp  FlowControlNodes.h  FramebufferNode.cpp  FramebufferNode.h  MathNodes.cpp  MathNodes.h  MeshNode.cpp  MeshNode.h  RenderPassNode.cpp  RenderPassNode.h  ShaderNode.cpp  ShaderNode.h  SystemNodes.cpp  SystemNodes.h  TextureFileNode.cpp  TextureFileNode.h  TextureNode.cpp  TextureNode.h
src/GLUtils/: DebugUtils.h
src/NodeEditor/: Graph.cpp  Graph.h  Node.cpp  Node.h  Ports.cpp  Ports.h
src/Rendering/: Framebuffer.cpp  Framebuffer.h  IPipelineHandler.h  Mesh.cpp  Mesh.h  RenderConfig.cpp  RenderConfig.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Shaders/: blinn-phong.frag  blinn-phong.vert  deferred_combine.frag  deferred_lighting.frag  deferred_lighting.vert  deferred_model.frag  deferred_model.vert  profile.frag  simple-model.vert  simple-quad.frag  simple-quad.vert  texture-quad.frag  texture-quad.vert
src/Utils/: DebugUtils.cpp  FileUtils.cpp  FileUtils.h  GLMUtils.h  GraphUtils.h  ImUtils.cpp  ImUtils.h  SerializationUtils.cpp  SerializationUtils.h  TimerUtils.cpp  TimerUtils.h  VariantUtils.cpp  VariantUtils.h
src/Window/: Window.cpp  Window.h
