cmake_minimum_required(VERSION 3.17)
project(lib)

message("Loading OpenGL")
add_subdirectory(glad/)
message("Loading GLM")
add_subdirectory(glm/)
message("Loading ImGui")
add_subdirectory(imgui/)
message("Loading NFD")
add_subdirectory(nativefiledialog/)
message("Loading STB")
add_subdirectory(stb/)
